- Added abstract methods to Zend_Pdf_Image for image details w/h etc (Kevin) 
- The Zend Framework is now released under the simpler new BSD license. (Andi)
- Fixed bug in Zend_Feed::findFeeds(). Reported by Ben Ramsey. (Mike)
- Zend_Db_Adapter_Pdo_Abstract::insert() has been removed (Rob)
- Fixed bug in Zend_Log::log(). Ticket #28 (Mike)

=RELEASE 0.1.3 / 18-Apr-2006=
- Zend_Filter is* methods return strictly TRUE or FALSE. (Chris)
- Zend_InputFilter has test* methods for retrieving valid data. (Chris)
- Fixed bug in Zend_View_Abstract::__isset(). Reported by James Simmons. (Mike)
- Zend_Db_Adapter_Pdo_Mysql::limit() now compatible with MySQL versions prior
  to 4.0. Reported by Greg Neustaetter (Mike)
- Fixed bug in Zend_Controller_Dispatcher_Token::setParams(). Reported by Rob
  Allen. (Chris)
- Fixed bug in Zend_Log::log(). Reported by Mislav. (Mike)
- Updated Zend_Filter::isFloat() and Zend_Filter::isInt() to respect locale.
  (Chris)
- Improved Zend_Db_Adapter_Pdo_Mssql contributed by Rob Allen. (Mike)
- Fixed bug in Zend_Controller_Dispatcher::_formatName. Reported by Arpad Ray.
  (Chris)
- Zend::dump() now works from CLI (Rob Allen)
- Improved support for XML-RPC namespaces (Mike, Chuck)
- Registry can now be tested with Zend::isRegistered (Shekar C. Reddy, Mike)
- Zend_Search_Lucene promoted from incubator (Alex)
- Zend_Cache has been accepted to the incubator (Fabien, Mislav)
- Zend_Json testing expanded; covers all major cases (Matthew)
- Fixed Zend_Json encoding of empty values (Matthew, Davey)
- Fixed Zend_Json encoding of associative arrays (Matthew, Davey)
- Fixed Zend_Json encoding of numeric indices in associative arrays (Matthew)
- Removed formatting (newlines, tabs) from Zend_Json encoding methods (Matthew)
- Fixed escaping in Zend_Json_Encoder (Matthew)
- Zend_HttpClient moved to Zend_Http_Client (Mike)
- Zend_Console_Args in the incubator but not yet refactored (Jason Garber)